# message_project

./: .env.sample  README.md  mailing_data.json  pyproject.toml  services.py
blog/: models.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: models.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_client_third_name.py
mailing/templates/mailing/: index.html
mailing/templates/mailing/includes/: inc_menu.html
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
