[tool.poetry]
name = "message-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dependence.dependencies]
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
pytils = "^0.4.1"
ipython = "^8.28.0"
python-dotenv = "^1.0.1"
django-apscheduler = "^0.7.0"
redis = "^5.2.0"
django = "4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
